content/_generated-doc/2.7/config/quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_configuration]]link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation[quarkus.hibernate-orm.scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation.create-target[quarkus.hibernate-orm.scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.scripts.generation.drop-target[quarkus.hibernate-orm.scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation[quarkus.hibernate-orm."persistence-unit-name".scripts.generation]`

[.description]
--
Select whether the database schema DDL files are generated or not. Accepted values: `none`, `create`, `drop-and-create`, `drop`, `update`, `validate`.
--|string 
|`none`


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.create-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.create-target]`

[.description]
--
Filename or URL where the database create DDL file should be generated.
--|string 
|


a| [[quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target]]`link:#quarkus-hibernate-orm-config-group-hibernate-orm-runtime-config-persistence-unit-hibernate-orm-config-persistence-unit-scripts_quarkus.hibernate-orm.-persistence-unit-name-.scripts.generation.drop-target[quarkus.hibernate-orm."persistence-unit-name".scripts.generation.drop-target]`

[.description]
--
Filename or URL where the database drop DDL file should be generated.
--|string 
|

|===